--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     
     <title>404 Not Found</title>
 
-    <link rel="icon" type="image/icon" href="/devchallenges.png">
+    <link rel="icon" type="image/icon" href="./devchallenges.png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -17,7 +17,7 @@
         </div>
         <div class="content-p">
             <div class="p-img">
-                <img class="p-img-s" src="/Scarecrow.png" alt="scarecrow">
+                <img class="p-img-s" src="./Scarecrow.png" alt="scarecrow">
             </div>
             <div class="p-text">
                 <div class="text-title">
